# xcat-mesh

./: .gitignore  LICENSE  README.md  pyproject.toml
src/xcat_mesh/: __init__.py  cli.py  config.py  errors.py  io.py  mesh.py  pipeline.py  resample.py  smooth.py  validate.py
tests/: test_config.py  test_validate.py
