[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xcat-mesh"
version = "0.1.0"
description = "Convert binary NIfTI segmentation masks to surface meshes (OBJ) with optional GPU Laplacian smoothing."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Your Name"}]
keywords = ["xcat", "nifti", "mesh", "marching-cubes", "medical-imaging"]
dependencies = [
  "numpy>=1.22",
  "nibabel>=5.0",
  "scikit-image>=0.20",
  "scipy>=1.9",
  "tqdm>=4.65",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]

[project.scripts]
xcat-mesh = "xcat_mesh.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
